k8s/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: akka-monitor
  name: akka-monitor
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akka-monitor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: akka-monitor
    spec:
      containers:
      - image: michalmarszalek/akka-monitor:1.3
        imagePullPolicy: IfNotPresent
        name: monitor
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "100m"
            memory: "260Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        volumeMounts:
        - name: config
          mountPath: "/home/app/Config"
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: appsettings-v001
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: akka-monitor
  namespace: monitoring
  name: monitoring-service
spec:
  ports:
  - name: prometheus
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: akka-monitor
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitor-network-policy
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: akka-monitor
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 8082
  egress:
  - {}
